Add Img do cards de index e deletados algus files

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -174,7 +174,7 @@
     }
     */
 .card-1{ 
-    background-image: url('../img/Snow-Foam-Full.jpg');
+    background-image: url('../img/LAVAGEM.png');
 
 }.card-2{   
     background-image: url('../');
