ajustando link menus , add img estofados

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -177,10 +177,10 @@
     background-image: url('../img/LAVAGEM.png');
 
 }.card-2{   
-    background-image: url('../');
+    background-image: url('../img/interno-hg.png');
 
 }.card-3{  
-    background-image: url('../');
+    background-image: url('../img/estofados.png');
 
 }
 
