Adicionado a Abstract IMG na file img,finalmente adicionado as formas abstratas na pag desk e mobile Full responsive

--- a/assets/css/main-mobile.css
+++ b/assets/css/main-mobile.css
@@ -53,6 +53,15 @@
         height: auto;
         padding: 10px;
     }
+
+    .circulo {
+        position: absolute;
+        width: 115%;
+        height: 100%;
+        right: 0px;
+        bottom: -250%;
+    }
+    }
         
 }
 
